# STAMP

./: .gitignore  README.md  pyproject.toml
CBraMod/: finetune_evaluator.py  finetune_main.py  finetune_trainer.py
CBraMod/datasets/: distributed_utils.py  lmdb_embedding_dataset.py  lmdb_np_dataset.py  lmdb_pickle_dataset.py  tuab_dataset.py  utils.py
CBraMod/models/: cbramod.py  criss_cross_transformer.py  model_for_bciciv2a.py  model_for_chb.py  model_for_faced.py  model_for_isruc.py  model_for_mumtaz.py  model_for_physio.py  model_for_seedv.py  model_for_seedvig.py  model_for_shu.py  model_for_speech.py  model_for_stress.py  model_for_tuab.py  model_for_tuev.py
CBraMod/preprocessing/: lmdb_writer.py  preprocessing_SEEDV.py  preprocessing_bciciv2a.py  preprocessing_faced.py  preprocessing_mumtaz.py  preprocessing_physio.py  preprocessing_seedvig.py  preprocessing_shu.py  preprocessing_speech.py  preprocessing_stress.py  preprocessing_tuab.py  preprocessing_tueg_for_pretraining.py  preprocessing_tuev.py
CBraMod/utils/: signaltools.py  util.py
scripts/: create_cbramod_experiment.py  create_moment_experiment_grid.py  create_moment_lora_experiment_grid.py  create_stamp_experiment_grid.py  generate_embeddings.py  run_cbramod_exp_manual.py  run_embedding_exp_manual.py  run_lora_exp_manual.py
scripts/data_download/: download_bciciv2a.py  download_isruc.sh
stamp/: __init__.py  analysis.py  common.py  embeddings.py  experiments.py  local.py
stamp/datasets/: lmdb_embedding_dataset.py  lmdb_writer.py  (+3 more)
tutorials/: stamp_setup.ipynb  stamp_training_and_testing.ipynb
(+25 files in other folders)
