[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stamp"
version = "0.1.0"
description = "Spatial-Temporal Adapter with Multi-Head Pooling (STAMP)"
readme = "README.md"
authors = [
  { name = "Brad Shook", email = "bshook@andrew.cmu.edu" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
include = ["stamp*", "CBraMod*"]